# androidjni

./: .gitignore  README.md  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/main/cpp/: CMakeLists.txt  actorjni.cpp  dalidemo.cpp  daliviewjni.cpp  handlejni.cpp  jniutils.cpp  jniutils.h
app/src/main/java/com/sec/dali/actors/: Actor.java  ClippingMode.java  ColorMode.java  Dimension.java  DrawMode.java  HorizontalAlignment.java  ResizePolicy.java  SizeScalePolicy.java  VerticalAlignment.java
app/src/main/java/com/sec/dali/math/: Matrix.java  Quaternion.java  Radian.java  Rect.java  Vector2.java  Vector3.java  Vector4.java
app/src/main/java/com/sec/dali/object/: Handle.java  Property.java
app/src/main/java/com/sec/daliview/: DaliView.java
app/src/main/res/layout/: layout_main.xml
dali/: .gitignore  Android.mk  Makefile  build.sh  build_core.sh  env.sh  jnigenerator.py
daliview/: .gitignore  build.gradle
daliview/src/main/cpp/: CMakeLists.txt  daliview.cpp
daliview/src/main/java/com/sec/daliview/: DaliView.java
